# Balance-indirect-reciprocity

./: Auto_Baxter_Wu.jl  BW.sh  BW_avg.sh  Baxter_Wu.jl  FSS_BW.py  H_leading8.jl  Indirect_network.jl  Kagome.jl  L_power_org  MonteCarlo.jl  N100s50  Opinion_K.jl  README.md  Sample_run.sh  T_BW.py  T_Baxter_Wu.jl  assessment.jl  aver  avg_BW.c  avg_BW.c:Zone.Identifier  check_formulae.jl  count.jl  eig.jl  eig_nr.jl  fitting.py  fixation_time.jl  graph_plot.py  imbalance.jl  kagome.sh  kagome_exchange.jl  mat_plot.py  time_series.jl  update_Phi.jl  vector_plot.py
CPP_code/: Indirect_network.cpp  Sample_run.sh  f_time  fixation_time.cpp
Eigenvector/: L4_M  L4_M.cpp  L4_M_N5.cpp  L4_all_conf  L4_all_conf.cpp  L4_edge.cpp  L4_eig  L4_eig.cpp  L4_eig_r  L4_eig_r.cpp  L4_eigen.eps  L4_f  L4_f.cpp  L6_M  (+49 more)
Eigenvector/N5_power_method/: CMakeLists.txt  Configuration.hpp  L4_M  L4_M.cpp  L4_eig  L4_eig.cpp  L4_eig_run.sh  L4_f  L4_f.cpp  L4_run.sh  L6_M  L6_M.cpp  L6_eig  L6_eig.cpp  L6_f  L6_f.cpp  L6_run_f.sh  L_power  L_power.cpp  L_power2  L_power2.cpp  L_power_org  L_power_org.cpp  L_run.sh  Markov.py  Markov.py:Zone.Identifier  Markov_clustering.py  N4L4.txt  N4_flip_list  N5_confi_list  Network_power  Network_power.cpp  Path_power  Path_power.cpp  a.out  check.cpp  check_L_power2.cpp  coloring.py  histo.py  import_dat  (+14 more)
Eigenvector/N5_power_method/network_flip/: Network_power.cpp  tes.py
Eigenvector/N5_power_method/old_codes/: C:Usersminwoo_vimrc  L4_eig.cpp  L4_f.cpp  L4_run.sh  L4_run_f.sh  L6_eig_run.sh  L6_run.sh  N6_flip_list  tes.cpp  tes.sh  tes2.sh  whole.sh
(+179 files in other folders)
